[tool.poetry]
name = "tensorflow-1-public"
version = "0.1.0"
description = ""
authors = ["hs <45358277+hy-sksem@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.7.0"
scikit-learn = "1.0.1"
pandas = "1.1.5"
matplotlib = "3.2.2"
seaborn = "0.11.2"
ipykernel = "^6.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
